deis doctor includes lots of k8s data (#81)
* basic data structure in place

* fix(misc): err responses, code cleanup, light optimizations

* chore(cleanup): err response, enumeration, log optimizations

* chore(err): `if err :=` is preferred over `if err =`
